--- a/wercker.yml
+++ b/wercker.yml
@@ -31,14 +31,13 @@ build:
     #    name: setup virtual environment
     #    install_wheel: false # Enable wheel to speed up builds (experimental)
 
-    # # Use this virtualenv step for python 3.2
-    # - virtualenv
-    #     name: setup virtual environment
-    #     python_location: /usr/bin/python3.2
+    # Use this virtualenv step for python 3.2
+    - virtualenv
+        name: setup virtual environment
+        python_location: /usr/bin/python3.2
 
     # A step that executes `pip install` command.
     - pip-install 
-        packages_list: "virtualenv"
 
     # # This pip-install clears the local wheel cache
     # - pip-install:
