--- a/wercker.yml
+++ b/wercker.yml
@@ -36,7 +36,7 @@ build:
         name: setup virtual environment
         python_location: /usr/bin/python3.2
 
-    # A step that executes `pip install` command.
+    # A step that executes `pip install` command
     - pip-install 
 
     # # This pip-install clears the local wheel cache
